--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "mobx": "^3.1.5",
+    "moment": "^2.17.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
@@ -47,7 +49,7 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "2.1.0-beta.0",
     "webpack-merge": "^2.4.0",
-    "write-file-webpack-plugin": "3.4.2",
-    "webpack-node-externals": "^1.5.4"
+    "webpack-node-externals": "^1.5.4",
+    "write-file-webpack-plugin": "3.4.2"
   }
 }
