--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "mobx": "^3.1.5",
+    "mobx-react": "^4.1.2",
     "moment": "^2.17.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
@@ -27,6 +28,7 @@
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
