--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "auth0-lock": "10.7.0",
+    "fs": "^0.0.1-security",
     "mobx": "^3.1.5",
     "mobx-react": "^4.1.2",
     "moment": "^2.17.1",
@@ -46,6 +48,7 @@
     "flow-bin": "^0.38.0",
     "flow-typed": "^2.0.0",
     "html-webpack-plugin": "2.24.1",
+    "node-libs-browser": "^2.0.0",
     "react-hot-loader": "3.0.0-beta.6",
     "style-loader": "^0.13.0",
     "webpack": "^2.2.1",
