--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,11 @@
         // Enables React code to work with HMR.
       ],
       "presets": ["react-hmre"]
+    },
+    "production": {
+      "plugins": [
+        "transform-decorators-legacy",
+      ]
     }
   }
 }
